added perf example